--- a/forsyningsbalancespillet.html
+++ b/forsyningsbalancespillet.html
@@ -338,7 +338,7 @@
         <ul style="margin-top:5px; padding-left:20px;">
           <li><strong>Positivt:</strong> Komponenten stiger procentvis <em>mere</em> end BNP og trækker gennemsnittet op.</li>
           <li><strong>Neutralt:</strong> Komponenten stiger med <em>samme</em> takt som BNP.</li>
-          <li><strong>Mindre betydning:</strong> Komponenten stiger (er over 0%), og bidrager derfor positivt til produktionen, men væksten er lavere end BNP-snittet.</li>
+          <li><strong>Mindre bidrag:</strong> Komponenten stiger (er over 0%), og bidrager derfor positivt til produktionen, men væksten er lavere end BNP-snittet.</li>
           <li><strong>Negativt:</strong> Tallet er negativt (falder). Dette trækker BNP direkte ned.</li>
         </ul>
       </div>
@@ -726,4 +726,5 @@ function showVictory() {
 
 </body>
 </html>
+
 
