--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
  <p class="mt-2 text-gray-700 dark:text-gray-300">Træn opstilling, andele og tommelfingerregler</p>
  </a>
 </article>
+        <article role="region" aria-labelledby="card-title-notat" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
+  <a href="skriftligtnotat.html" class="block p-6">
+    <h3 id="card-title-notat" class="text-xl font-semibold text-[#7C3AED]">Skriftligt notat</h3>
+    <p class="mt-2 text-gray-700 dark:text-gray-300">Vejledning og struktur til det skriftlige notat</p>
+  </a>
+</article>
       </div>
     </section>
   </main>
@@ -114,6 +120,7 @@
 
 </body>
 </html>
+
 
 
 
