--- a/skriftligtnotat.html
+++ b/skriftligtnotat.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="da">
   <head>
@@ -26,23 +25,28 @@
       import saveAs from 'file-saver';
 
       // --- Inlined from services/documentService.ts ---
-      const createHtmlContentForDoc = (sections, metadata) => {
+      const createHtmlContentForDoc = (sections, metadata, studentInfo) => {
         let html = `
           <!DOCTYPE html>
           <html xmlns:o='urn:schemas-microsoft-com:office:office' xmlns:w='urn:schemas-microsoft-com:office:word' xmlns='http://www.w3.org/TR/REC-html40'>
           <head>
             <meta charset='utf-8'>
-            <title>Notat - International Økonomi A</title>
+            <title>${studentInfo.noteTitle || 'Notat'} - International Økonomi A</title>
             <style>
               body { font-family: 'Times New Roman', Times, serif; font-size: 12pt; }
-              h1 { font-size: 16pt; font-weight: bold; color: #000000; }
-              h2 { font-size: 14pt; font-weight: bold; color: #000000; }
+              h1 { font-size: 16pt; font-weight: bold; color: #000000; margin-bottom: 5pt; }
+              .header-info { font-size: 11pt; color: #555555; margin-bottom: 20pt; border-bottom: 1px solid #000; padding-bottom: 10pt; }
+              h2 { font-size: 14pt; font-weight: bold; color: #000000; margin-top: 15pt; }
               p { margin: 0 0 1em 0; }
               .metadata { font-size: 1pt; color: #ffffff; margin-top: 0; border: none; padding: 0; user-select: none; }
             </style>
           </head>
           <body>
-            <h1>Notat - International Økonomi A</h1>
+            <h1>${studentInfo.noteTitle || 'Notat - International Økonomi A'}</h1>
+            <div class="header-info">
+              Navn: ${studentInfo.studentName || '—'}<br>
+              Klasse: ${studentInfo.studentClass || '—'}
+            </div>
         `;
         sections.forEach(section => {
           if (section.content.trim()) {
@@ -63,27 +67,31 @@
         return html;
       };
 
-      const generateDocx = (sections, metadata) => {
-        const htmlContent = createHtmlContentForDoc(sections, metadata);
+      const generateDocx = (sections, metadata, studentInfo) => {
+        const htmlContent = createHtmlContentForDoc(sections, metadata, studentInfo);
         const blob = new Blob([htmlContent], {
           type: 'application/vnd.ms-word'
         });
-        saveAs(blob, 'notat_international_oekonomi.doc');
+        const filename = studentInfo.noteTitle 
+          ? `${studentInfo.noteTitle.replace(/\s+/g, '_')}_notat.doc` 
+          : 'notat_international_oekonomi.doc';
+        saveAs(blob, filename);
       };
 
 
       // --- Inlined Component: IconButton ---
-      const IconButton = ({ onClick, icon, label, className = '', disabled = false }) => {
+      const IconButton = ({ onClick, icon, label, className = '', disabled = false, title = '' }) => {
         return React.createElement(
           'button',
           {
             onClick: onClick,
             'aria-label': label,
+            title: title || label,
             disabled: disabled,
             className: `flex items-center space-x-2 px-3 py-2 text-sm font-medium rounded-md transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed ${className}`
           },
           React.createElement('i', { className: icon }),
-          React.createElement('span', { className: "hidden sm:inline" }, label)
+          label && React.createElement('span', { className: "hidden sm:inline" }, label)
         );
       };
 
@@ -142,16 +150,95 @@
         );
       };
 
+      // --- Inlined Component: SafeInfoInput (New shared safety logic for small fields) ---
+      const SafeInfoInput = ({ value, onChange, placeholder, label, onIllegalAttempt }) => {
+        const [pasteWarning, setPasteWarning] = useState(false);
+        const [isLocked, setIsLocked] = useState(false);
+        const [lockoutTimer, setLockoutTimer] = useState(30);
+        
+        const lastTypedTime = useRef(Date.now());
+        const charCountSinceLastCheck = useRef(0);
+        const timerRef = useRef(null);
+
+        useEffect(() => {
+          if (isLocked) {
+            setLockoutTimer(30);
+            timerRef.current = window.setInterval(() => {
+              setLockoutTimer(prev => {
+                if (prev <= 1) {
+                  clearInterval(timerRef.current);
+                  setIsLocked(false);
+                  return 0;
+                }
+                return prev - 1;
+              });
+            }, 1000);
+          }
+          return () => { if (timerRef.current) clearInterval(timerRef.current); };
+        }, [isLocked]);
+
+        const handleChange = (e) => {
+          if (isLocked) return;
+          const VELOCITY_THRESHOLD = 20;
+          const currentTime = Date.now();
+          const timeDiff = currentTime - lastTypedTime.current;
+          charCountSinceLastCheck.current += Math.abs(e.target.value.length - value.length);
+          if (timeDiff > 100) {
+            const velocity = charCountSinceLastCheck.current;
+            if (velocity > VELOCITY_THRESHOLD) {
+              setIsLocked(true);
+            }
+            charCountSinceLastCheck.current = 0;
+            lastTypedTime.current = currentTime;
+          }
+          onChange(e.target.value);
+        };
+
+        const handlePasteOrDrop = (e) => {
+          e.preventDefault();
+          onIllegalAttempt();
+          setPasteWarning(true);
+          setTimeout(() => setPasteWarning(false), 3000);
+        };
+
+        return React.createElement('div', { className: "relative" },
+          React.createElement('label', { className: "block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1" }, label),
+          React.createElement('div', { className: "relative" },
+            React.createElement('input', {
+              type: "text",
+              value: value,
+              onChange: handleChange,
+              onPaste: handlePasteOrDrop,
+              onDrop: handlePasteOrDrop,
+              onDragOver: (e) => e.preventDefault(),
+              onContextMenu: (e) => e.preventDefault(),
+              disabled: isLocked,
+              className: "w-full p-2 border border-gray-300 dark:border-gray-600 rounded focus:ring-blue-500 bg-gray-50 dark:bg-gray-700 text-gray-900 dark:text-gray-100",
+              placeholder: placeholder
+            }),
+            isLocked && React.createElement('div', { className: "absolute inset-0 bg-gray-900 bg-opacity-80 flex justify-center items-center rounded z-10" },
+              React.createElement('span', { className: "text-white text-xs font-bold" }, "LÅST: ", lockoutTimer, "s")
+            ),
+            pasteWarning && React.createElement('div', { className: "absolute -top-10 left-0 bg-red-100 border border-red-400 text-red-700 px-2 py-1 rounded text-[10px] shadow-lg z-20" },
+              "Ingen indsætning tilladt"
+            )
+          )
+        );
+      };
+
       // --- Inlined Component: NoteSection ---
       const NoteSection = ({ section, onContentChange, onIllegalAttempt }) => {
         const [wordCount, setWordCount] = useState(0);
         const [pasteWarning, setPasteWarning] = useState(false);
         const [isLocked, setIsLocked] = useState(false);
         const [lockoutTimer, setLockoutTimer] = useState(30);
+        const [isSpeaking, setIsSpeaking] = useState(false);
+        const [readingRate, setReadingRate] = useState(1.0);
 
         const lastTypedTime = useRef(Date.now());
         const charCountSinceLastCheck = useRef(0);
         const timerRef = useRef(null);
+        const textareaRef = useRef(null);
 
         useEffect(() => {
           const words = section.content.trim().split(/\s+/).filter(Boolean);
@@ -182,7 +269,7 @@
           const VELOCITY_THRESHOLD = 20;
           const currentTime = Date.now();
           const timeDiff = currentTime - lastTypedTime.current;
-          charCountSinceLastCheck.current += e.target.value.length - section.content.length;
+          charCountSinceLastCheck.current += Math.abs(e.target.value.length - section.content.length);
           if (timeDiff > 100) {
             const velocity = charCountSinceLastCheck.current;
             if (velocity > VELOCITY_THRESHOLD) {
@@ -202,11 +289,27 @@
         };
 
         const readAloud = () => {
-          if ('speechSynthesis' in window && section.content) {
-            const utterance = new SpeechSynthesisUtterance(section.content);
-            utterance.lang = 'da-DK';
+          if ('speechSynthesis' in window) {
+            const selection = window.getSelection().toString();
+            const textToRead = selection || section.content;
+
+            if (textToRead) {
+              window.speechSynthesis.cancel();
+              const utterance = new SpeechSynthesisUtterance(textToRead);
+              utterance.lang = 'da-DK';
+              utterance.rate = readingRate;
+              utterance.onstart = () => setIsSpeaking(true);
+              utterance.onend = () => setIsSpeaking(false);
+              utterance.onerror = () => setIsSpeaking(false);
+              window.speechSynthesis.speak(utterance);
+            }
+          }
+        };
+
+        const stopReading = () => {
+          if ('speechSynthesis' in window) {
             window.speechSynthesis.cancel();
-            window.speechSynthesis.speak(utterance);
+            setIsSpeaking(false);
           }
         };
 
@@ -219,17 +322,37 @@
             React.createElement('p', { className: "text-white" }, "Tekstfeltet er låst i ", React.createElement('span', { className: "font-mono text-xl" }, lockoutTimer), " sekunder.")
           ),
           React.createElement(
-            'div', { className: "flex justify-between items-start mb-2" },
+            'div', { className: "flex justify-between items-start mb-4" },
             React.createElement(
               'div', null,
               React.createElement('h2', { className: "text-xl font-bold text-blue-700 dark:text-blue-400" }, section.title),
               React.createElement('p', { className: "text-sm text-gray-500 dark:text-gray-400 italic" }, section.subtitle)
             ),
-            React.createElement(IconButton, { onClick: readAloud, icon: "fa-solid fa-volume-high", label: "Læs højt", className: "bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 text-gray-700 dark:text-gray-200", disabled: !section.content })
+            React.createElement(
+              'div', { className: "flex items-center space-x-2" },
+              React.createElement(
+                'div', { className: "flex items-center space-x-2 bg-gray-100 dark:bg-gray-700 px-2 py-1 rounded-md" },
+                React.createElement('span', { className: "text-xs text-gray-500" }, "Tempo:"),
+                React.createElement('input', {
+                  type: "range",
+                  min: "0.5",
+                  max: "2",
+                  step: "0.1",
+                  value: readingRate,
+                  onChange: (e) => setReadingRate(parseFloat(e.target.value)),
+                  className: "w-16 h-1 bg-blue-200 rounded-lg appearance-none cursor-pointer"
+                }),
+                React.createElement('span', { className: "text-xs font-mono w-6" }, readingRate.toFixed(1))
+              ),
+              isSpeaking ? 
+                React.createElement(IconButton, { onClick: stopReading, icon: "fa-solid fa-stop", label: "Stop", className: "bg-red-500 hover:bg-red-600 text-white" }) :
+                React.createElement(IconButton, { onClick: readAloud, icon: "fa-solid fa-volume-high", label: "Læs op", className: "bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 text-gray-700 dark:text-gray-200", disabled: !section.content })
+            )
           ),
           React.createElement(
             'div', { className: "relative" },
             React.createElement('textarea', { 
+              ref: textareaRef,
               value: section.content, 
               onChange: handleChange, 
               onPaste: handlePasteOrDrop, 
@@ -281,11 +404,48 @@
         ];
 
         const [sections, setSections] = useState(initialSections);
+        const [studentName, setStudentName] = useState('');
+        const [studentClass, setStudentClass] = useState('');
+        const [noteTitle, setNoteTitle] = useState('');
         const [isHelpVisible, setHelpVisible] = useState(false);
         const [isStructureVisible, setStructureVisible] = useState(false);
         const [illegalAttempts, setIllegalAttempts] = useState(0);
+        const [lastSaved, setLastSaved] = useState(null);
         
         const startTimeRef = useRef(Date.now());
+
+        // LOAD DATA
+        useEffect(() => {
+          try {
+            const savedSections = localStorage.getItem('notato_sections');
+            const savedName = localStorage.getItem('notato_student_name');
+            const savedClass = localStorage.getItem('notato_student_class');
+            const savedTitle = localStorage.getItem('notato_note_title');
+            const savedAttempts = localStorage.getItem('notato_illegal_attempts');
+
+            if (savedSections) setSections(JSON.parse(savedSections));
+            if (savedName) setStudentName(savedName);
+            if (savedClass) setStudentClass(savedClass);
+            if (savedTitle) setNoteTitle(savedTitle);
+            if (savedAttempts) setIllegalAttempts(parseInt(savedAttempts, 10) || 0);
+          } catch (e) {
+            console.error("Fejl ved indlæsning fra localStorage", e);
+          }
+        }, []);
+
+        // AUTO-SAVE EVERY 5 SECONDS
+        useEffect(() => {
+          const saveTimer = setInterval(() => {
+            localStorage.setItem('notato_sections', JSON.stringify(sections));
+            localStorage.setItem('notato_student_name', studentName);
+            localStorage.setItem('notato_student_class', studentClass);
+            localStorage.setItem('notato_note_title', noteTitle);
+            localStorage.setItem('notato_illegal_attempts', illegalAttempts.toString());
+            setLastSaved(new Date().toLocaleTimeString());
+          }, 5000);
+
+          return () => clearInterval(saveTimer);
+        }, [sections, studentName, studentClass, noteTitle, illegalAttempts]);
 
         const handleContentChange = useCallback((id, newContent) => {
           setSections(prevSections =>
@@ -320,7 +480,12 @@
             sessionTime: formatSessionTime(),
             attemptCount: illegalAttempts
           };
-          generateDocx(sections, metadata);
+          const studentInfo = {
+            studentName,
+            studentClass,
+            noteTitle
+          };
+          generateDocx(sections, metadata, studentInfo);
         };
 
         const helpContent = [
@@ -343,6 +508,34 @@
           React.createElement(Header, { onHelpClick: () => setHelpVisible(true), onStructureClick: () => setStructureVisible(true) }),
           React.createElement(
             'main', { className: "flex-grow container mx-auto px-4 py-8" },
+            // Student Info Inputs with safety measures
+            React.createElement(
+              'div', { className: "bg-white dark:bg-gray-800 rounded-lg shadow-lg p-6 mb-8 grid grid-cols-1 md:grid-cols-3 gap-4" },
+              React.createElement(SafeInfoInput, {
+                label: "Navn",
+                value: studentName,
+                onChange: setStudentName,
+                placeholder: "Dit fulde navn",
+                onIllegalAttempt: incrementIllegalAttempts
+              }),
+              React.createElement(SafeInfoInput, {
+                label: "Klasse",
+                value: studentClass,
+                onChange: setStudentClass,
+                placeholder: "F.eks. 3.a",
+                onIllegalAttempt: incrementIllegalAttempts
+              }),
+              React.createElement(SafeInfoInput, {
+                label: "Notat Titel",
+                value: noteTitle,
+                onChange: setNoteTitle,
+                placeholder: "Emne for notatet",
+                onIllegalAttempt: incrementIllegalAttempts
+              }),
+              lastSaved && React.createElement('div', { className: "md:col-span-3 text-right text-xs text-gray-400 italic" }, 
+                "Gemt automatisk kl. ", lastSaved
+              )
+            ),
             React.createElement(
               'div', { className: "grid grid-cols-1 gap-8" },
               sections.map((section) =>
@@ -361,7 +554,7 @@
         );
       };
 
-      // --- Inlined from index.tsx: Mount the app ---
+      // --- Mount the app ---
       const rootElement = document.getElementById('root');
       if (!rootElement) {
         throw new Error("Could not find root element to mount to");
