Update landing page content and structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Allan Baisgaard – Landing Page</title>
+  <title>Allan Baisgaard's kreative øvelser</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>body{font-family:'Inter',sans-serif;}</style>
@@ -101,6 +101,12 @@
     <p class="mt-2 text-gray-700 dark:text-gray-300">Vejledning og struktur til det skriftlige notat</p>
   </a>
 </article>
+        <article role="region" aria-labelledby="card-title-omlagt" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
+          <a href="skriftlighed.html" class="block p-6">
+            <h3 id="card-title-omlagt" class="text-xl font-semibold text-[#7C3AED]">Omlagt skriftlighed</h3>
+            <p class="mt-2 text-gray-700 dark:text-gray-300">Materiale og vejledning til omlagt skriftlighed</p>
+          </a>
+        </article>
       </div>
     </section>
   </main>
@@ -120,6 +126,7 @@
 
 </body>
 </html>
+
 
 
 
