--- a/skriftlighed.html
+++ b/skriftlighed.html
@@ -280,6 +280,7 @@
         const [isAboutVisible, setAboutVisible] = useState(false);
         const [sessionSeconds, setSessionSeconds] = useState(0);
         const [lastSaved, setLastSaved] = useState(null);
+        const [isSaving, setIsSaving] = useState(false);
 
         const startTimeRef = useRef(Date.now());
 
@@ -306,6 +307,7 @@
         // Save
         useEffect(() => {
           const saver = setInterval(() => {
+            setIsSaving(true);
             localStorage.setItem('notato_main_text', mainText);
             localStorage.setItem('notato_disposition', dispositionText);
             localStorage.setItem('notato_student_name', studentName);
@@ -313,6 +315,7 @@
             localStorage.setItem('notato_note_title', noteTitle);
             localStorage.setItem('notato_illegal_attempts', illegalAttempts.toString());
             setLastSaved(new Date().toLocaleTimeString());
+            setTimeout(() => setIsSaving(false), 600);
           }, 5000);
           return () => clearInterval(saver);
         }, [mainText, dispositionText, studentName, studentClass, noteTitle, illegalAttempts]);
@@ -382,19 +385,23 @@
           React.createElement('footer', { className: "bg-white dark:bg-gray-800 border-t dark:border-gray-700 px-8 py-3 flex justify-between items-center shadow-lg" },
             React.createElement('div', { className: "flex items-center space-x-6" },
               React.createElement('div', null,
-                React.createElement('span', { className: "text-xs font-bold text-gray-400 uppercase mr-2" }, "Status:"),
-                React.createElement('span', { className: "text-sm text-green-500 font-medium" }, "Klar til skrivning")
-              ),
-              React.createElement('div', null,
                 React.createElement('span', { className: "text-xs font-bold text-gray-400 uppercase mr-2" }, "Ordtælling:"),
                 React.createElement('span', { className: "text-sm font-bold" }, wordCount)
               ),
-              lastSaved && React.createElement('div', { className: "text-xs text-gray-400 italic" }, "Gemt automatisk ", lastSaved)
+              React.createElement('div', { className: "flex items-center space-x-2 text-xs text-gray-500 dark:text-gray-400" },
+                lastSaved ?
+                React.createElement(React.Fragment, null,
+                    React.createElement('i', {
+                        className: `fas fa-check-circle transition-all duration-500 ease-out ${isSaving ? 'text-green-500 scale-125' : 'text-gray-400'}`
+                    }),
+                    React.createElement('span', null, "Gemt kl. ", lastSaved)
+                ) : React.createElement('span', { className: "italic" }, "Arbejdet er endnu ikke gemt.")
+              )
             ),
             React.createElement('button', {
               onClick: handleDownload, disabled: wordCount === 0,
               className: "bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-6 rounded-lg flex items-center space-x-2 transition-all shadow-md active:scale-95 disabled:opacity-50 disabled:grayscale"
-            }, React.createElement('i', { className: "fas fa-file-word" }), React.createElement('span', null, "Download som Word\n"))
+            }, React.createElement('i', { className: "fas fa-file-word" }), React.createElement('span', null, "Download som Word"))
           ),
 
           // Modals
