Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
             <p class="mt-2 text-gray-700 dark:text-gray-300">Vejledning og struktur til det skriftlige notat</p>
           </a>
         </article>
+        <article role="region" aria-labelledby="card-title-landespil" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
+          <a href="landespillet.html" class="block p-6">
+            <h3 id="card-title-landespil" class="text-xl font-semibold text-[#7C3AED]">Landespillet</h3>
+            <p class="mt-2 text-gray-700 dark:text-gray-300">Deltag i landespillet og test din viden</p>
+          </a>
+        </article>
         <article role="region" aria-labelledby="card-title-planner" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
           <a href="planner.html" class="block p-6">
             <h3 id="card-title-planner" class="text-xl font-semibold text-[#7C3AED]">Planlæg din tid</h3>
@@ -134,3 +140,4 @@
 
 </body>
 </html>
+
